# NN

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
include/: Common.h  Layer.h  NN.h  Net.h  Node.h  TransformFunc.h  Wire.h
src/: Layer.cpp  Main.cpp  NN.cpp  Net.cpp  Node.cpp  TransformFunc.cpp  Wire.cpp
